--- a/ace-comp/css/styles.css
+++ b/ace-comp/css/styles.css
@@ -43,14 +43,15 @@ nav {
 
 /* NAVIGATION ITEMS */
 nav {
+  position: fixed;
+  width: 100%;
+  z-index: 2;
+  padding: 0.25rem 0;
   font-size: 0.75rem;
   font-weight: 500;
   text-transform: uppercase;
-  width: 100%;
   background-color: var(--black);
   filter: opacity(var(--opacity));
-  position: fixed;
-  z-index: 2;
 }
 ul {
   display: flex;
@@ -225,7 +226,7 @@ section p {
 .main-bottom {
   padding: rem 0;
 }
-/* NOT CURRENTLY IN USE */
+/* NOT CURRENTLY IN USE! */
 /* .main-bottom h2 {
   border-bottom: 1px solid var(--light-gray);
   width: fit-content;
@@ -261,13 +262,34 @@ https://fonts.google.com/icons?icon.set=Material+Symbols */
   margin-right: 0.5rem;
   color: var(--gold2);
 }
-
-  /* GOOGLE MAPS FIX */
+/* GOOGLE MAPS FIX */
 iframe {
   margin: 1rem 0;
   border: 1px solid var(--light-gray);
   width: 100%;
   height: 300px;
+}
+
+/* FOOTER ITEMS */
+footer {
+  font-size: 0.75rem;
+  font-weight: 400;
+  padding: 1.5rem 0.5rem;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 1.8;
+  background-color: var(--black);
+  color: var(--cream);
+}
+.footer-info a {
+  color: var(--gold);
+}
+.footer-info a:hover,
+.footer-info a:focus {
+  color: var(--gold2);
+}
+.privacy-terms {
+  margin-top: 1rem;
 }
 
 /********* BEGIN MEDIA QUERIES ***********/
@@ -298,6 +320,9 @@ iframe {
     padding: 0 1rem;
     align-items: center;
     flex-wrap: nowrap;
+  }
+  nav {
+    padding: 0;
   }
   .top-nav {
     justify-content: space-around;
@@ -347,13 +372,18 @@ iframe {
 @media screen and (min-width: 660px) {
   nav {
     font-size: 0.875rem;
-    padding-bottom: 0;
   }
   .main h1 {
     max-width: fit-content;
   }
   .material-symbols-outlined {
     margin-right: -0.5rem;
+  }
+  .footer-info {
+    font-size: 0.875rem;
+  }
+  .privacy-terms {
+
   }
 }
 @media screen and (min-width: 800px) {
@@ -381,22 +411,4 @@ iframe {
   }
 }
 /********* END MEDIA QUERIES ***********/
-
-/* FOOTER ITEMS */
-footer {
-  font-size: 0.875rem;
-  font-weight: 400;
-  padding: 1.5rem 0.5rem;
-  text-align: center;
-  line-height: 1.8;
-  background-color: var(--black);
-  color: var(--cream);
-}
-footer a {
-  color: var(--gold);
-}
-footer a:hover,
-footer a:focus {
-  color: var(--gold2);
-}
 /* END */
