--- a/ace-comp/css/styles.css
+++ b/ace-comp/css/styles.css
@@ -99,11 +99,12 @@ li:first-child {
 /* HERO CONTAINER ITEMS */
 .hero-container {
   height: 100vh;
-  min-height: 633px;
-  max-height: 74vh;
+  min-height: 630px;
+  max-height: 73vh;
+  max-width: var(--max-width;)
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center bottom;
+  background-position: center;
   background-image: url('../img/checkup.jpg');
   background-attachment: scroll;
 }
@@ -117,13 +118,13 @@ li:first-child {
   background-color: rgba(222, 184, 135, 0.2);
 }
 #logo {
-  width: 120px;
+  width: 140px;
 }
 img {
   max-width: 100%;
   height: auto;
   display: block;
-  margin-bottom: 0.5rem;
+  /* margin-bottom: 0.5rem; */
 }
 a {
   color: var(--white);
@@ -147,7 +148,7 @@ a:focus {
 }
 .header-text {
   width: 100%;
-  padding: 1rem 0.5rem 1.25rem;
+  padding: 1rem 0.375rem 1.25rem;
   text-align: center;
   background-color: var(--blue);
   filter: opacity(var(--opacity2));
@@ -303,9 +304,9 @@ footer a:active {
   align-items: center;
 }
 /********* BEGIN MEDIA QUERIES ***********/
-@media screen and (min-width: 343px) {
+@media screen and (min-width: 342px) {
   .header-text {
-    margin: 1.5rem 0;
+    margin: 1.375rem 0;
   }
   /* CONTACT ANCHOR FIX 2 of 3 */
   #contact {
@@ -358,6 +359,9 @@ footer a:active {
   }
   #logo {
     width: auto;
+  }
+  .header-text {
+    margin: 1.5rem 0 1.25rem;
   }
   h1 {
     font-size: 2rem;
