--- a/ace-comp/css/styles.css
+++ b/ace-comp/css/styles.css
@@ -276,12 +276,12 @@ footer a:active {
 }
 
 /* PAGE ANCHOR FIXES */
-/* CONTACT ANCHOR FIX 1 of 3 */
+/* CONTACT ANCHOR FIX 1 of 4 */
 #contact {
   margin-top: -9.25rem;
   padding-top: 9.25rem;
 }
-/* REPAIR, SPYWARE, DATA, NETWORKS ANCHOR FIX 1 of 3 */
+/* REPAIR, SPYWARE, DATA, NETWORKS ANCHOR FIX 1 of 4 */
 #repair, #spyware, #data, #networks {
   margin-top: -10.5rem;
   padding-top: 10.5rem;
@@ -296,27 +296,27 @@ footer a:active {
   .header-text {
     margin: 1.375rem 0;
   }
-  /* CONTACT ANCHOR FIX 2 of 3 */
+  /* CONTACT ANCHOR FIX 2 of 4 */
   #contact {
     margin-top: -6.25rem;
     padding-top: 6.25rem;
   }
-  /* REPAIR, SPYWARE, DATA, NETWORKS ANCHOR FIX 2 of 3 */
+  /* REPAIR, SPYWARE, DATA, NETWORKS ANCHOR FIX 2 of 4 */
   #repair, #spyware, #data, #networks {
     margin-top: -7.5rem;
     padding-top: 7.5rem;
   }
 }
 @media screen and (min-width: 515px) {
-  /* CONTACT ANCHOR FIX 3 of 3 */
+  /* CONTACT ANCHOR FIX 3 of 4 */
   #contact {
-    margin-top: -4rem;
-    padding-top: 4rem;
+    margin-top: -3.25rem;
+    padding-top: 3.25rem;
   }
-  /* REPAIR, SPYWARE, DATA, NETWORKS ANCHOR FIX 3 of 3 */
+  /* REPAIR, SPYWARE, DATA, NETWORKS ANCHOR FIX 3 of 4 */
   #repair, #spyware, #data, #networks {
-    margin-top: -5.25rem;
-    padding-top: 5.25rem;
+    margin-top: -4.5rem;
+    padding-top: 4.5rem;
   }
   nav {
     padding: 0;
@@ -371,6 +371,16 @@ footer a:active {
   }
 }
 @media screen and (min-width: 660px) {
+  /* CONTACT ANCHOR FIX 4 of4 */
+  #contact {
+    margin-top: -2.75rem;
+    padding-top: 2.75rem;
+  }
+  /* REPAIR, SPYWARE, DATA, NETWORKS ANCHOR FIX 4 of 4 */
+  #repair, #spyware, #data, #networks {
+    margin-top: -4rem;
+    padding-top: 4rem;
+  }
   nav {
     font-size: 0.875rem;
   }
